--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>bithazard.game</groupId>
     <artifactId>grimrock-mod-extract</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <name>Grimrock Mod Extract</name>
 
     <properties>
@@ -16,19 +16,19 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>2.11.0</version>
         </dependency>
         <dependency>
-            <groupId>org.luaj</groupId>
+            <groupId>com.github.wagyourtail.luaj</groupId>
             <artifactId>luaj-jse</artifactId>
-            <version>3.0.2</version>
+            <version>combined-391b914ef1-1</version>
         </dependency>
     </dependencies>
 
     <repositories>
         <repository>
-            <id>openhab</id>
-            <url>https://dl.bintray.com/openhab/mvn</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
